About page changed

--- a/about.html
+++ b/about.html
@@ -99,9 +99,7 @@ Author URL: http://w3layouts.com
                 <div class="col-lg-8 mt-lg-0 mt-5">
                     <h5 class="title-small mb-2">Hello, I am  Web Designer</h5>
                     <h3 class="title-big">Having O7 Years of Experience</h3>
-                    <p class="mt-4">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Non quae, fugiat consequatur voluptatem nihil ad. Lorem ipsum dolor sit amet.</p>
+                    <p class="mt-4">If you are searching for a web designer for designing your website attractive and perfect looking, I am here for you. I can do it, I will design a static website at the standard package, and also include and also included 1-year free service for maintaining the website by your on the decision..</p>
                     <div class="my-info mt-4">
                         <div class="single-info"><span>Name:</span>
                             <p>A sim</p>
